--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.freemarker.expose-request-attributes=true
+
+upload.path=C:/Users/slava/IdeaProjects/boom/uploads
