--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,13 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.freemarker.expose-request-attributes=true
 
+spring.mail.host=smtp.yandex.ru
+spring.mail.username=slava.aleinikov97@yandex.ru
+spring.mail.password=jternhqnqaeieiud
+spring.mail.port=465
+spring.mail.protocol=smtps
+mail.debug=true
+
+
 upload.path=C:/Users/slava/IdeaProjects/boom/uploads/
+
