--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,8 @@ spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=false
 spring.jpa.generate-ddl=false
 
+spring.flyway.enabled=false
+
 spring.freemarker.expose-request-attributes=true
 
 spring.mail.host=smtp.yandex.ru
