--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,5 @@ mail.debug=true
 
 upload.path=C:/Users/slava/IdeaProjects/boom/uploads/
 
+recaptcha.secret =6LeIF1gdAAAAADI7vIQdHvxgiCVsBOQsdIJHhLGi
+
