Added Remember Me

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,5 @@ upload.path=C:/Users/slava/IdeaProjects/boom/uploads/
 
 recaptcha.secret =6LeIF1gdAAAAADI7vIQdHvxgiCVsBOQsdIJHhLGi
 
+spring.session.jdbc.initialize-schema=always
+spring.session.jdbc.table-name=SPRING_SESSION
