Possible bug fixes during deploy

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -16,14 +16,14 @@ spring.mail.username=slava.aleinikov97@yandex.ru
 spring.mail.password=jternhqnqaeieiud
 spring.mail.port=465
 spring.mail.protocol=smtps
-mail.debug=false
+mail.debug=true
 
 
-upload.path=C:/Users/slava/IdeaProjects/boom/uploadsServer/
+upload.path=C:/Users/slava/IdeaProjects/boom/uploads/
 
 recaptcha.secret =6LeIF1gdAAAAADI7vIQdHvxgiCVsBOQsdIJHhLGi
 
 spring.session.jdbc.initialize-schema=always
-spring.session.jdbc.table-name=SPRING_SESSION 
+spring.session.jdbc.table-name=SPRING_SESSION
 
-hostname= "????????? ?????"
+hostname= localhost:8080
