replacing mysql with postgresql

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,10 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/my_db
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-spring.jpa.hibernate.ddl-auto=validate
-spring.jpa.show-sql=false
+spring.datasource.url=jdbc:postgresql://localhost/boom
+spring.datasource.username=postgres
+spring.datasource.password=gfgfyz
 spring.jpa.generate-ddl=false
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=validate
+
 
 spring.flyway.enabled=false
 
@@ -21,9 +20,9 @@ mail.debug=false
 
 upload.path=C:/Users/slava/IdeaProjects/boom/uploadsServer/
 
-recaptcha.secret =6LeIF1gdAAAAADI7vIQdHvxgiCVsBOQsdIJHhLGi
+recaptcha.secret=6LeIF1gdAAAAADI7vIQdHvxgiCVsBOQsdIJHhLGi
 
 spring.session.jdbc.initialize-schema=always
 spring.session.jdbc.table-name=SPRING_SESSION 
 
-hostname= "????????? ?????"
+hostname=localhost:8080
