--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,11 +1,9 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/my_db
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-spring.jpa.hibernate.ddl-auto=validate
-spring.jpa.show-sql=false
+spring.datasource.url=jdbc:postgresql://localhost/boom
+spring.datasource.username=postgres
+spring.datasource.password=gfgfyz
 spring.jpa.generate-ddl=false
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=validate
 
 spring.flyway.enabled=false
 
@@ -16,14 +14,11 @@ spring.mail.username=slava.aleinikov97@yandex.ru
 spring.mail.password=jternhqnqaeieiud
 spring.mail.port=465
 spring.mail.protocol=smtps
-mail.debug=true
-
-
-upload.path=C:/Users/slava/IdeaProjects/boom/uploads/
-
-recaptcha.secret =6LeIF1gdAAAAADI7vIQdHvxgiCVsBOQsdIJHhLGi
 
 spring.session.jdbc.initialize-schema=always
 spring.session.jdbc.table-name=SPRING_SESSION
 
+mail.debug=true
+upload.path=C:/Users/slava/IdeaProjects/boom/uploads/
+recaptcha.secret =6LeIF1gdAAAAADI7vIQdHvxgiCVsBOQsdIJHhLGi
 hostname= localhost:8080
