Changing the migration database

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -4,7 +4,6 @@ spring.datasource.password=gfgfyz
 spring.jpa.generate-ddl=false
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=validate
-
 spring.flyway.enabled=false
 
 spring.freemarker.expose-request-attributes=true
@@ -17,6 +16,7 @@ spring.mail.protocol=smtps
 
 spring.session.jdbc.initialize-schema=always
 spring.session.jdbc.table-name=SPRING_SESSION
+spring.session.jdbc.schema=classpath:db/migration/V1__Init_DB.sql
 
 mail.debug=true
 upload.path=C:/Users/slava/IdeaProjects/boom/uploads/
