Changing the migration database 3

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
-spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost/boom}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME:postgres}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:gfgfyz}
-spring.jpa.generate-ddl=false
+#spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost/boom}
+#spring.datasource.username=${SPRING_DATASOURCE_USERNAME:postgres}
+#spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:gfgfyz}
+#spring.jpa.generate-ddl=false
 spring.jpa.show-sql=false
-#spring.jpa.hibernate.ddl-auto=update
 
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
-spring.flyway.enabled=false
+#spring.flyway.enabled=false
 
 spring.freemarker.expose-request-attributes=true
 
