--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,7 +3,8 @@ spring.datasource.username=postgres
 spring.datasource.password=gfgfyz
 spring.jpa.generate-ddl=false
 spring.jpa.show-sql=false
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=create-drop
+
 spring.flyway.enabled=false
 
 spring.freemarker.expose-request-attributes=true
