Changing the migration database 3

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,14 +1,14 @@
 spring.datasource.url=jdbc:postgresql://localhost/boom
 spring.datasource.username=postgres
 spring.datasource.password=gfgfyz
+
 spring.jpa.generate-ddl=false
 spring.jpa.show-sql=false
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=validate
 
 spring.flyway.enabled=false
 
 spring.freemarker.expose-request-attributes=true
-
 spring.mail.host=smtp.yandex.ru
 spring.mail.username=slava.aleinikov97@yandex.ru
 spring.mail.password=jternhqnqaeieiud
@@ -17,7 +17,6 @@ spring.mail.protocol=smtps
 
 spring.session.jdbc.initialize-schema=always
 spring.session.jdbc.table-name=SPRING_SESSION
-spring.session.jdbc.schema=classpath:db/migration/V1__Init_DB.sql
 
 mail.debug=true
 upload.path=C:/Users/slava/IdeaProjects/boom/uploads/
