--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,16 @@
-spring.datasource.url=jdbc:postgresql://localhost/boom
-spring.datasource.username=postgres
-spring.datasource.password=gfgfyz
-spring.jpa.generate-ddl=false
-spring.jpa.show-sql=false
-spring.jpa.hibernate.ddl-auto=validate
+#spring.datasource.url=jdbc:postgresql://localhost/boom
+#spring.datasource.username=postgres
+#spring.datasource.password=gfgfyz
+
+spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
-spring.flyway.enabled=false
-spring.freemarker.expose-request-attributes=true
+spring.flyway.enabled=true
 
+spring.freemarker.expose-request-attributes=true
 spring.mail.host=smtp.yandex.ru
 spring.mail.username=slava.aleinikov97@yandex.ru
 spring.mail.password=jternhqnqaeieiud
@@ -19,10 +20,11 @@ spring.mail.protocol=smtps
 spring.session.jdbc.initialize-schema=always
 spring.session.jdbc.table-name=SPRING_SESSION
 
+#spring.session.jdbc.schema=classpath:db/migration/V1__Init_DB.sql
+
 mail.debug=false
 upload.path=C:/Users/slava/IdeaProjects/boom/uploadServer
 recaptcha.secret=6LeIF1gdAAAAADI7vIQdHvxgiCVsBOQsdIJHhLGi
 hostname=boom-web.herokuapp.com
-
 #spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
 #spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
