--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -4,7 +4,7 @@ spring.datasource.password=gfgfyz
 
 spring.jpa.generate-ddl=false
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=validate
 
 spring.flyway.enabled=false
 
@@ -21,4 +21,9 @@ spring.session.jdbc.table-name=SPRING_SESSION
 mail.debug=true
 upload.path=C:/Users/slava/IdeaProjects/boom/uploads/
 recaptcha.secret =6LeIF1gdAAAAADI7vIQdHvxgiCVsBOQsdIJHhLGi
-hostname= localhost:8080
+myhostname= localhost:8080
+
+
+spring.datasource.hikari.auto-commit=false
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
