--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost/boom}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME:postgres}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:gfgfyz}
+spring.datasource.url=jdbc:postgresql://localhost/boom
+spring.datasource.username=postgres
+spring.datasource.password=gfgfyz
 
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 spring.flyway.enabled=true
@@ -21,8 +21,10 @@ spring.session.jdbc.table-name=SPRING_SESSION
 #spring.session.jdbc.schema=classpath:/db/migration/V1__Init_DB.sql
 
 mail.debug=false
-upload.path=./uploadServer
+upload.path=C:/Users/slava/IdeaProjects/boom/uploadsServer
 recaptcha.secret=6LeIF1gdAAAAADI7vIQdHvxgiCVsBOQsdIJHhLGi
-hostname=boom-proj.herokuapp.com
-spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
-spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+myhostname=3.120.145.249
+#hostname=boom-proj.herokuapp.com
+
+#spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
+#spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
