--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,10 +21,11 @@ spring.session.jdbc.table-name=SPRING_SESSION
 #spring.session.jdbc.schema=classpath:/db/migration/V1__Init_DB.sql
 
 mail.debug=false
-upload.path=C:/Users/slava/IdeaProjects/boom/uploadsServer
 recaptcha.secret=6LeIF1gdAAAAADI7vIQdHvxgiCVsBOQsdIJHhLGi
-myhostname=3.120.145.249
-#hostname=boom-proj.herokuapp.com
+#myhostname=3.120.145.249
+myhostname=boom-proj.herokuapp.com
 
-#spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
-#spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.datasource.hikari.auto-commit=false
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
