--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-spring.datasource.url=jdbc:postgresql://localhost/boom
-spring.datasource.username=postgres
-spring.datasource.password=gfgfyz
+#spring.datasource.url=${jdbc:postgresql://localhost/boom
+#spring.datasource.username=postgres
+#spring.datasource.password=gfgfyz
 
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 spring.flyway.enabled=true
@@ -18,7 +18,6 @@ spring.mail.protocol=smtps
 
 spring.session.jdbc.initialize-schema=always
 spring.session.jdbc.table-name=SPRING_SESSION
-#spring.session.jdbc.schema=classpath:/db/migration/V1__Init_DB.sql
 
 mail.debug=false
 recaptcha.secret=6LeIF1gdAAAAADI7vIQdHvxgiCVsBOQsdIJHhLGi
