--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ target/
 .settings
 .springBeans
 .sts4-cache
+.ssh
 
 ### IntelliJ IDEA ###
 .idea
@@ -31,3 +32,5 @@ build/
 
 ### VS Code ###
 .vscode/
+/.ssh/
+/boom-web/
