--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-#spring.datasource.url=${jdbc:postgresql://localhost/boom
-#spring.datasource.username=postgres
-#spring.datasource.password=gfgfyz
+spring.datasource.url=jdbc:postgresql://localhost/boom
+spring.datasource.username=postgres
+spring.datasource.password=gfgfyz
 
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 spring.flyway.enabled=true
@@ -21,7 +21,6 @@ spring.session.jdbc.table-name=SPRING_SESSION
 
 mail.debug=false
 recaptcha.secret=6LeIF1gdAAAAADI7vIQdHvxgiCVsBOQsdIJHhLGi
-#myhostname=3.120.145.249
 myhostname=boom-proj.herokuapp.com
 
 spring.datasource.hikari.auto-commit=false
