Fixed image loader

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -4,7 +4,7 @@ spring.datasource.password=gfgfyz
 
 spring.jpa.generate-ddl=false
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=create
 
 spring.flyway.enabled=false
 
