--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
-spring.flyway.enabled=true
+spring.flyway.enabled=false
 
 spring.freemarker.expose-request-attributes=true
 spring.mail.host=smtp.yandex.ru
